パスワード強度表示機能追加

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
                 生成ボタンを押してください
             </div>
 
+            <div class="strength-meter">
+                <div class="strength-bar" id="strengthBar"></div>
+            </div>
+            <div class="strength-info">
+                <span class="strength-label" id="strengthLabel">-</span>
+                <span class="strength-details" id="strengthDetails"></span>
+            </div>
+
             <div class="btn-group">
                 <button class="btn btn-primary" id="generateBtn">生成</button>
                 <button class="btn btn-secondary" id="copyBtn">コピー</button>
