履歴表示/非表示機能追加

--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
         </div>
 
         <div class="card">
-            <h2>保存したパスワード履歴</h2>
+            <div class="card-header">
+                <h2>保存したパスワード履歴</h2>
+                <button class="btn-toggle" id="toggleHistoryBtn">▲</button>
+            </div>
             <div class="history-list" id="historyList">
                 <div class="empty-history">履歴がありません</div>
             </div>
